--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 <!-- PERSISTENT FOOTER -->
 <footer class="site-footer">
   <div class="footer-credits">
-    <div class="footer-row"><span class="footer-label">BUILT BY</span> <span class="footer-name">CHRIS</span></div>
+    <div class="footer-row"><span class="footer-label">BUILT BY</span> <span class="footer-name">CHRIS HAWK</span></div>
     <div class="footer-row"><span class="footer-label">METHODOLOGY BY</span> <a href="https://www.youtube.com/@KVNAUST" target="_blank" class="footer-link">KVN AUST</a> <span class="footer-sep">·</span> <a href="https://docs.google.com/document/d/19cPH_LDXj6jjLUPPKn1OITJ0jJx3MrJIm9B7fUqaJD8/" target="_blank" class="footer-link">YouTube Recycle Bin</a></div>
     <div class="footer-fine">No data collected. No tracking. Just vibes.</div>
   </div>
